# multi_os_compatibility_check

./: .gitignore  README.md  pixi.toml  run_all.sh
01_simple/: CMakeLists.txt  run.sh
01_simple/include/: banana.h  bread.h  food.h  kitchen.h
01_simple/src/: main.cpp
02_eigen_cv/: CMakeLists.txt  run.sh
02_eigen_cv/include/: camera.h
02_eigen_cv/src/: camera.cpp  main.cpp
03_ros/: run.sh
03_ros/src/cpp_pubsub/: CMakeLists.txt  package.xml
03_ros/src/cpp_pubsub/src/: publisher_member_function.cpp
